# rayzen

./: README.md  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  app.css  index.tsx  rpc.ts
src-tauri/: Cargo.toml  db.sqlite  rust-project.json  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: bookmark.rs  groups.rs  lib.rs  mod.rs  organization.rs  prelude.rs  user.rs  workspace.rs
src-tauri/migration/src/: lib.rs  m20250711_115931_create_bookmark.rs  m20250711_115936_create_groups.rs  m20250711_115943_create_organization.rs  m20250711_115948_create_workspace.rs  m20250712_104206_create_user.rs
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/domain/: mod.rs  util.rs
src-tauri/src/domain/dto/: mod.rs
src-tauri/src/domain/dto/bookmark/: bookmark_converter.rs  bookmark_dto.rs  mod.rs
src-tauri/src/domain/dto/groups/: groups_converter.rs  groups_dto.rs  mod.rs
src-tauri/src/domain/dto/organization/: mod.rs  organization_converter.rs  organization_dto.rs
src-tauri/src/domain/dto/user/: mod.rs  user_converter.rs  user_dto.rs
src-tauri/src/domain/dto/workspace/: mod.rs  workspace_converter.rs  workspace_dto.rs
src-tauri/src/domain/entities/: bookmark.rs  groups.rs  mod.rs  organization.rs  workspace.rs
src-tauri/src/domain/repository/: bookmark_repository.rs  groups_repository.rs  mod.rs  organization_repository.rs  user_repository.rs  workspace_repository.rs
src-tauri/src/domain/router/: bookmark_router.rs  groups_router.rs  mod.rs  organization_router.rs  user.rs  workspace_router.rs
src-tauri/src/domain/service/: bookmark_service.rs  group_service.rs  mod.rs  organization_service.rs  user_service.rs  workspace_service.rs
src-tauri/src/domain/types/: groups.rs
src-tauri/src/router/: mod.rs  user.rs
src/components/: AppSidebar.tsx  BookmarkContextMenu.tsx  CreateBookmarkSheet.tsx  CreateWorkspaceSheet.tsx  FirstTimeSetup.tsx  GroupBookmarksList.tsx  ListOfGroups.tsx  NoGroupsFound.tsx  OrganizationSettings.tsx  PageWrapper.tsx  SearcResult.tsx  SearchInput.tsx  SearchResult.tsx  SelectOptions.tsx  SelectWorkspace.tsx  Settings.tsx  WorkspaceSettings.tsx
src/hooks/: useGroupBookmarks.ts  useGroups.ts  useOrganization.ts  useWorkspace.ts
src/lib/: apiHelpers.ts
src/stores/: bookmark.ts
src/types/: binding.ts  index.ts
