[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[package]
name = "rayzen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rayzen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46.1", features = ["full"] }
rspc = "0.3.1" # Changed from 0.4.1
rspc-tauri = "0.1.1"
specta = { version = "2.0.0-rc.20", features = [
  "uuid",
  "chrono",
] } # Changed from 1.0.5
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.88"
sea-orm = { version = "1.1.13", features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",          # `DATABASE_DRIVER` feature
] }
dotenvy = "0.15"
dirs = "5.0"
entity = { path = "entity" }
migration = { path = 'migration' }

[dependencies.uuid]
version = "1.17.0"
features = ["v4", "serde"]

[dependencies.sea-orm-migration]
version = "1.1.13"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",          # `DATABASE_DRIVER` feature
]
