[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.13", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.20", features = ["uuid", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
